Update nifi-mapr-build.md