@@ -1,18 +1,18 @@
 Build Full NiFi with MapR Dependencies
 ======================================
 
-## If using NiFI > 1.0.0
-
 ### Clone
 ```
-git clone http://git-wip-us.apache.org/repos/asf/nifi.git
-git checkout -b 1.0.0 rel/nifi-1.0.0
+git clone https://git-wip-us.apache.org/repos/asf/nifi.git
+# change branch to latest stable nifi release (if you dont want master branch)
+git checkout -b 1.2.0 rel/nifi-1.2.0
 ```
 
 ```
 cd nifi
-# assuming you are running MapR 5.1 - otherwise check the docs for the appropriate version
-mvn -T 2.0C clean install -DskipTests -Pmapr -Dhadoop.version=2.7.0-mapr-1602
+# assuming you are running MapR 5.2 - otherwise check the docs for the appropriate version
+MAVEN_OPTS="-Xms1024m -Xmx3076m -XX:MaxPermSize=256m"
+mvn -T 2.0C clean install -DskipTests -Pmapr -Dhadoop.version=2.7.0-mapr-1607
 ```
 
 ### Deploy
